--- a/styles/global.css
+++ b/styles/global.css
@@ -1,34 +1,34 @@
 @font-face {
     font-family: 'Shabnam';
-    src: url('./assets/fonts/shabnam-thin.ttf') format('truetype');
+    src: url('../assets/fonts/shabnam-thin.ttf') format('truetype');
     font-weight: 100;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Shabnam';
-    src: url('./assets/fonts/shabnam-light.ttf') format('truetype');
+    src: url('../assets/fonts/shabnam-light.ttf') format('truetype');
     font-weight: 300;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Shabnam';
-    src: url('./assets/fonts/shabnam.ttf') format('truetype');
+    src: url('../assets/fonts/shabnam.ttf') format('truetype');
     font-weight: 400;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Shabnam';
-    src: url('./assets/fonts/shabnam-medium.ttf') format('truetype');
+    src: url('../assets/fonts/shabnam-medium.ttf') format('truetype');
     font-weight: 500;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Shabnam';
-    src: url('./assets/fonts/shabnam-bold.ttf') format('truetype');
+    src: url('../assets/fonts/shabnam-bold.ttf') format('truetype');
     font-weight: 700;
     font-style: normal;
 }
