--- a/styles/global.css
+++ b/styles/global.css
@@ -88,6 +88,72 @@ svg {
     height: 1em;
 }
 
+header,
+main,
 footer {
+    padding: 2rem 4rem;
+}
+
+header {
+    backdrop-filter: brightness(-20%);
+    background-size: cover;
+    color: var(--color-light-idle);
+
+    position: relative;
+
+    display: flex;
+    flex-direction: column;
+
+    text-align: center;
+}
+
+header::before {
+    content: '';
+
+    backdrop-filter: brightness(0.2);
+
+    position: absolute;
+    inset: 0;
+    z-index: -1;
+}
+
+header .logo {
+    align-self: flex-start;
+
+    font-size: 1.8rem;
+    font-weight: 500;
+}
+
+header .logo:hover {
+    color: var(--color-primary-idle);
+}
+
+header .hero {
+    flex: 1;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+
+    height: 0;
+}
+
+header .hero h1 {
+    font-size: 4.8rem;
+    font-weight: 700;
+}
+
+main {
+    padding: 4rem;
+}
+
+footer {
+    background: var(--color-dark-idle);
+    color: var(--color-light-idle);
+
     margin-top: auto;
+
+    font-size: 1.2rem;
 }
